--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
     height: 100%;
-    color: black;
+    color: #777;
     line-height: 1.8;
 }
 
@@ -79,7 +79,7 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <img src="http://d1vnh8mbrp67em.cloudfront.net/image/file/4/cb/14754/0035907.jpg" width="1300" height="600">
+   <img src="http://d1vnh8mbrp67em.cloudfront.net/image/file/4/cb/14754/0035907.jpg" height="600" width="1300">
   </div>
 </div>
 
